tests/baselines/reference/decoratorOnClassAccessor3.errors.txt
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor3.ts(4,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.


==== tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor3.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        public @dec get accessor() { return 1; }
        ~~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }